--- a/about.html
+++ b/about.html
@@ -2,20 +2,18 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>JavaScript Base Template</title>
-    <!-- Required meta tags -->
+    <title>Hundo: A coding challenge by Matt Lane</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/Hundo-tab.png">
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/JavaScriptTemplate/css/site.css">
-    <link rel="stylesheet" href="/JavaScriptTemplate/css/prism.css">
+    <link rel="stylesheet" href="/css/prism.css">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -39,8 +37,7 @@
                         <a class="nav-link" href="/JavaScriptTemplate/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/JavaScriptTemplate/about.html">About The
-                            Developer</a>
+                        <a class="nav-link active" href="http://mattlane.info">About Me</a>
                     </li>
                 </ul>
             </div>
