--- a/app.html
+++ b/app.html
@@ -2,26 +2,25 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>JavaScript Base Template</title>
-    <!-- Required meta tags -->
+    <title>JavaScript: A template by Matt Lane</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/JavaScriptTemplate/css/site.css">
-    <link rel="stylesheet" href="/JavaScriptTemplate/css/prism.css">
+    <link rel="stylesheet" href="/css/prism.css">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body class="d-flex flex-column h-100">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
+            <img src="/img/AppIcon-small.png">
             <a class="navbar-brand" href="/JavaScriptTemplate/index.html">JS Template</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/JavaScriptTemplate/app.html">The App</a>
+                        <a class="nav-link active" href="/app.html">The App</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/code.html">The Code</a>
+                        <a class="nav-link" href="/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/about.html">About The Developer</a>
+                        <a class="nav-link" href="http://mattlane.info">About Me</a>
                     </li>
                 </ul>
             </div>
