--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>JavaScript: A template by Matt Lane</title>
+    <title>EvilOlive: A Coding Challenge</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
@@ -16,15 +16,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="d-flex flex-column h-100">
-
+<body class="d-flex flex-column h-100" style="background-color:lightgray">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <img src="/img/AppIcon-small.png">
-            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">JS Template</a>
+            <img src="/img/AppIcon-small.png" alt="">
+            <a class="navbar-brand" href="index.html">EvilOlive</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -44,12 +42,56 @@
             </div>
         </div>
     </nav>
-
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
-                CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+            <p class="lead"></p>
+            <div class="row">
+                <div class="col-lg-4">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">EvilOlive: A Coding Challenge</h1>
+                    <h2 class="lead">This javascript coding exercise uses loops to display
+                        the numbers from 0 to 100. Odd numbers will be displayed in standard font, while
+                        even numbers will appear in <strong>BOLD</strong>.
+                    </h2>
+                    <ul class="fa-ul pt-2 checklist">
+                        <li><span class="fa-li"><i class="fas fa-check-square color-EvilOliveGreen"></i></span>CSS and
+                            Bootstrap Layout</li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript
+                            Fundamentals</li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript Loops</li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript Functions
+                        </li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript Dom
+                            Manipulation
+                        </li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript
+                            if/then/else</li>
+                        <li><span class="fa-li"><i
+                                    class="fas fa-check-square color-EvilOliveGreen"></i></span>JavaScript Boolean
+                            Logic</li>
+                    </ul>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                        <a type="button" class="btn background-color border-dark mt-4 mb-4" href="app.html">Try It
+                            Out!</a>
+                    </div>
+                    <h3 class="fw-bold mt-5">Technologies Used </h3>
+                    <div class="d-flex">
+                        <div class="row row-cols-4 col-sm-6">
+                            <img src="/img/javascript.png" alt="Javascript">
+                            <img src="img/bootstrap.png" alt="Bootstrap">
+                            <img src="img/html-5.png" alt="HTML5">
+                            <img src="img/css-3.png" alt="CSS">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <img src="/img/Olive01.png" alt="" class="img-fluid">
+                </div>
+            </div>
         </div>
     </main>
 
