--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Hundo: A coding challenge by Matt Lane</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/img/Hundo-tab.png">
+    <title>EvilOlive: A Coding Challenge</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,8 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">JS Template</a>
+            <img src="/img/AppIcon-small.png">
+            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">EvilOlive</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,13 +29,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/app.html">The App</a>
+                        <a class="nav-link" href="/app.html">The App</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/JavaScriptTemplate/code.html">The Code</a>
+                        <a class="nav-link" href="/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="http://mattlane.info">About Me</a>
