--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>JavaScript: A template by Matt Lane</title>
+    <title>EvilOlive: A Coding Challenge</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <img src="/img/AppIcon-small.png">
-            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">JS Template</a>
+            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">EvilOlive</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,35 +54,39 @@
     </main>
 
     <footer class="footer mt-auto py-3 bg-dark">
-        <div class="container-fluid text-center text-secondary">
-            <div class="row">
+        <div class="container-fluid text-center text-light">
+            <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
-                    &copy2021 <span class="text-primary">Matt Lane | Demo Code</span>
+                    &copy2021 <span class="text-light">Matt Lane | <img src="/img/Favicon-small.png" alt="Matt Lane"
+                            class="img-fluid"> | matthewjlane.47@gmail.com
+                    </span>
                 </div>
                 <div class="col">
-                    <span class="text-light text-uppercase"> Matt Lane </span>
                 </div>
                 <div class="col">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                    <i class="fab fa-github fa-2x"></i>
-                    <i class="fab fa-twitter fa-2x"></i>
-                    <i class="fab fa-youtube fa-2x"></i>
+                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:linkedin-icon"
+                            data-inline="false"></span></a>
+                    <a href="#" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
+                            data-inline="false" style="color: #7a319a"></span></a>
+                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:twitter"
+                            data-inline="false"></span></a>
+                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:youtube-icon"
+                            data-inline="false"></span></a>
                 </div>
+            </div>
+        </div>
     </footer>
-
-
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
+    <script src="/js/prism.js"></script>
+    <script src="/js/site.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </script>
-
 
 </body>
 
