--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
         <div class="container">
             <p class="lead"></p>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">EvilOlive: A Coding Challenge</h1>
-                    <h2 class="lead">This javascript coding exercise uses loops to display
-                        the numbers from 0 to 100. Odd numbers will be displayed in standard font, while
-                        even numbers will appear in <strong>BOLD</strong>.
+                    <h2 class="lead">The EvilOlive app will demonstrate how JavaScript can be used to accept user input
+                        and then reverse the letters within the resulting string. The code that powers EvilOlive will
+                        then determine if what was typed into the field is a palindrome, aka a word or phrase that is
+                        identical when read either backward or forward.
                     </h2>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square color-EvilOliveGreen"></i></span>CSS and
@@ -78,7 +79,7 @@
                         <a type="button" class="btn background-color border-dark mt-4 mb-4" href="app.html">Try It
                             Out!</a>
                     </div>
-                    <h3 class="fw-bold mt-5">Technologies Used </h3>
+                    <h3 class="fw-bold mt-">Technologies Used </h3>
                     <div class="d-flex">
                         <div class="row row-cols-4 col-sm-6">
                             <img src="/img/javascript.png" alt="Javascript">
@@ -88,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-6">
                     <img src="/img/Olive01.png" alt="" class="img-fluid">
                 </div>
             </div>
