--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>EvilOlive: A Coding Challenge</title>
+    <title>EvilOlive | The App</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
@@ -16,15 +16,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="d-flex flex-column h-100">
-
+<body class="d-flex flex-column h-100" style="background-color:lightgray">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <img src="/img/AppIcon-small.png">
-            <a class="navbar-brand" href="/JavaScriptTemplate/index.html">EvilOlive</a>
+            <img src="/img/AppIcon-small.png" alt="">
+            <a class="navbar-brand" href="index.html">EvilOlive</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -45,11 +43,67 @@
         </div>
     </nav>
 
+
     <main class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
-                CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+        <div class="container mt-3">
+            <div class="row">
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col border-bottom border-dark">
+                            <h1>EvilOlive...mwa ha ha ha!</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col mt-3">
+                            <h3>Instructions</h1>
+                                <div class="row">
+                                    <p> Type any word or phrase that you like in the field to the right. You can use one
+                                        of the examples provided below, or you can try your hand at making up one of
+                                        your own! When you click the <strong>Find Out</strong> button, EvilOlive will
+                                        check to see if your olive is evil, too! (In other words, it will check to see
+                                        if what you entered is a palindrome or not...)
+                                    </p>
+
+                                    <h5 class="col mt-4 mb-2">Examples:</h5>
+                                    <ul type="disc"></ul>
+                                    <li>racecar</li>
+                                    <li>kayak</li>
+                                    <li>tacocat</li>
+                                    <li>Too bad...I hid a boot.</li>
+                                    <li>Go hang a salami! I'm a lasagna hog!</li>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-5">
+                    <div class="row">
+                        <h1>Is <em>your</em> olive evil?</h1>
+                        <div class="col mt-3">
+                            <input type="text" class="form-control border-dark" id="userInput"
+                                placeholder="Enter your word(s) here">
+                        </div>
+                        <div class="col"></div>
+                        <div class="row-5">
+                            <div class="row-5">
+                                <button id="submitBtn" class="btn background-color border-dark mt-4 mb-4">Find
+                                    Out!</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="row border-bottom border-dark">
+                                <h3>Results</h3>
+                            </div>
+                            <table class="table table-striped">
+                                <tbody id="output">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -76,18 +130,23 @@
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/prism.js"></script>
     <script src="/js/site.js"></script>
+    <script>
+        document.getElementById("submitBtn").addEventListener("click", getNumbers)
+    </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
 </body>
 
 </html>
