--- a/app.html
+++ b/app.html
@@ -141,7 +141,7 @@
     <script src="/js/prism.js"></script>
     <script src="/js/site.js"></script>
     <script>
-        document.getElementById("submitBtn").addEventListener("click", getNumbers)
+        document.getElementById("userInput").addEventListener("click", getValue)
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
