--- a/code.html
+++ b/code.html
@@ -165,10 +165,8 @@
                 <div class="row mt-5">
                     <p>The code is structured in three functions:</p>
                     <p></p>
-                    <p><strong>getValues</strong> accepts(gets) the user input from the page. It utilizes
-                        <strong>getElementById</strong> to pull the values from the page. It passes those values to
-                        the <strong>generateNumbers</strong> function, which returns an array of values and passes
-                        that array to the <strong>displayNumbers</strong> function.</p>
+                    <p>The function named <strong>getValue</strong> 
+                    </p>
                     <p></p>
                     <p><strong>generateNumbers</strong> takes in two parameters: <strong>startValue</strong> and
                         <strong>endValue</strong>. We create a variable (numbers) that holds an array. A
