--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             Logic</li>
                     </ul>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a type="button" class="btn background-color border-dark mt-4 mb-4" href="app.html">Try It
+                        <a type="button" class="btn background-color border-dark mt-4 mb-4" id="btnSubmit" href="app.html">Try It
                             Out!</a>
                     </div>
                     <h3 class="fw-bold mt-">Technologies Used </h3>
@@ -112,8 +112,6 @@
                     <a href="#" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
                             data-inline="false" style="color: #7a319a"></span></a>
                     <a href="#" target="_blank"><span class="iconify" data-icon="logos:twitter"
-                            data-inline="false"></span></a>
-                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:youtube-icon"
                             data-inline="false"></span></a>
                 </div>
             </div>
