--- a/about.html
+++ b/about.html
@@ -47,9 +47,8 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
-                CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+            <h1 class="mt-5">Redirect to <a href="url">https://mattlane.info</a></h1>
+            <p class="lead"></p>
         </div>
     </main>
 
