--- a/app.html
+++ b/app.html
@@ -86,20 +86,23 @@
                         <div class="col"></div>
                         <div class="row-5">
                             <div class="row-5">
-                                <button id="submitBtn" class="btn background-color border-dark mt-4 mb-4">Find
+                                <button id="submitBtn" type="button"
+                                    class="btn background-color border-dark mt-4 mb-4">Find
                                     Out!</button>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="row border-bottom border-dark">
-                                <h3>Results</h3>
+                            <div class="row border-bottom border-dark"></div>
+                            <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                                <h4 class="alert-heading">Yep, your olive is evil!</h4>
+                                <hr>
+                                <p class="mb-0" id="msg">
+                                    This means the word or phrase you entered can be read exactly the same way both
+                                    backward and forward. Cool, right?
+                                </p>
                             </div>
-                            <table class="table table-striped">
-                                <tbody id="output">
-                                </tbody>
-                            </table>
                         </div>
                     </div>
                 </div>
@@ -123,8 +126,6 @@
                     <a href="#" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
                             data-inline="false" style="color: #7a319a"></span></a>
                     <a href="#" target="_blank"><span class="iconify" data-icon="logos:twitter"
-                            data-inline="false"></span></a>
-                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:youtube-icon"
                             data-inline="false"></span></a>
                 </div>
             </div>
