--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">EvilOlive: A Coding Challenge</h1>
                     <h2 class="lead">The EvilOlive app will demonstrate how JavaScript can be used to accept user input
-                        and then reverse the letters within the resulting string. The code that powers EvilOlive will
-                        then determine if what was typed into the field is a palindrome, aka a word or phrase that is
-                        identical when read either backward or forward.
+                        and then reverse the letters within the resulting string.
                     </h2>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square color-EvilOliveGreen"></i></span>CSS and
@@ -76,7 +74,8 @@
                             Logic</li>
                     </ul>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a type="button" class="btn background-color border-dark mt-4 mb-4" id="btnSubmit" href="app.html">Try It
+                        <a type="button" class="btn background-color border-dark mt-4 mb-4" id="btnSubmit"
+                            href="app.html">Try It
                             Out!</a>
                     </div>
                     <h3 class="fw-bold mt-">Technologies Used </h3>
