--- a/app.html
+++ b/app.html
@@ -57,12 +57,15 @@
                         <div class="col mt-3">
                             <h3>Instructions</h1>
                                 <div class="row">
-                                    <p> Type any word or phrase that you like in the field to the right. You can use one
-                                        of the examples provided below, or you can try your hand at making up one of
-                                        your own! When you click the <strong>Find Out</strong> button, EvilOlive will
-                                        check to see if your olive is evil, too! (In other words, it will check to see
-                                        if what you entered is a palindrome or not...)
-                                    </p>
+                                    <p> A phrase that reads the same way both backwards and forwards (like EvilOlive) is
+                                        called a palindrome. See if you can think of a palindrome of your own by typing
+                                        any word or phrase that you like in the field to the right.</p>
+
+                                    <p>You can use one of the examples provided below, or you can try your hand at
+                                        making up one of your own! When you're ready, click the <strong>Find
+                                            Out</strong> button to see if your olive is evil, too! (In other words, it
+                                        will display your entry in reverse so that you can tell if it is a palindrome
+                                        or not...)</p>
 
                                     <h5 class="col mt-4 mb-2">Examples:</h5>
                                     <ul type="disc"></ul>
@@ -96,12 +99,6 @@
                         <div class="col">
                             <div class="row border-bottom border-dark"></div>
                             <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
-                                <h4 class="alert-heading">Yep, your olive is evil!</h4>
-                                <hr>
-                                <p class="mb-0" id="msg">
-                                    This means the word or phrase you entered can be read exactly the same way both
-                                    backward and forward. Cool, right?
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -121,8 +118,8 @@
                 <div class="col">
                 </div>
                 <div class="col">
-                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:linkedin-icon"
-                            data-inline="false"></span></a>
+                    <a href="#" target="https://www.linkedin.com/in/matt-lane-ab5588108/"><span class="iconify"
+                            data-icon="logos:linkedin-icon" data-inline="false"></span></a>
                     <a href="#" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
                             data-inline="false" style="color: #7a319a"></span></a>
                     <a href="#" target="_blank"><span class="iconify" data-icon="logos:twitter"
