--- a/app.html
+++ b/app.html
@@ -118,11 +118,11 @@
                 <div class="col">
                 </div>
                 <div class="col">
-                    <a href="#" target="https://www.linkedin.com/in/matt-lane-ab5588108/"><span class="iconify"
+                    <a href="https://www.linkedin.com/in/matt-lane-ab5588108/" target="_blank"><span class="iconify"
                             data-icon="logos:linkedin-icon" data-inline="false"></span></a>
-                    <a href="#" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
+                    <a href="https://github.com/LaneTrain47" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
                             data-inline="false" style="color: #7a319a"></span></a>
-                    <a href="#" target="_blank"><span class="iconify" data-icon="logos:twitter"
+                    <a href="https://twitter.com/LaneTrain47" target="_blank"><span class="iconify" data-icon="logos:twitter"
                             data-inline="false"></span></a>
                 </div>
             </div>
