--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>EvilOlive | The Code</title>
+    <title>EvilOlive | Home</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon_browser-tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
